--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+h1
+{
+  color:blue;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 250%;
+}
+
+h2, h3 {
+  color:black;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:
+}
+body{
+  margin: 2em;
+}
+body, input[type="text"], button {
+  color: black;
+  font-family: Cambria, sans-serif;
+}
+
+{
+  font-family: Arial, Helvetica, sans-serif;
+}
