--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,22 +1,21 @@
-<h2>{{hero.name | uppercase}} Details</h2>
-<div><span>ID: </span>{{hero.id}}</div>
-<div>
-<label for="name">Nombre del super heroe: </label>
-<input id="name" [(ngModel)]="hero.name" placeholder="name">
-</div>
-<div>
-<label for="edad">Edad del super heroe: </label>
-<input id="edad" [(ngModel)]="hero.edad" placeholder="edad">
-</div>
-<div>
-<label for="poder">Poder del super heroe: </label>
-<input id="poder" [(ngModel)]="hero.poder" placeholder="poder">
-</div>
-<div>
-<label for="identidad">Identidad del super heroe: </label>
-<input id="identidad" [(ngModel)]="hero.identidad" placeholder="identidad">
-</div>
-<div>
-<label for="universo">Universo del super heroe: </label>
-<input id="universo" [(ngModel)]="hero.universo" placeholder="universo">
+<h2>Mis heroes Favoritos</h2>
+<ul class="heroes">
+  <li *ngFor="let hero of heroes"
+    [class.selected]="hero === selectedHero"
+      (click)="onSelect(hero)">
+      <span class="badge">{{hero.id}}</span>{{hero.name}}
+    </li>
+</ul>
+<div *ngIf="selectedHero">
+  <h2>{{selectedHero.name | uppercase}} detalles</h2>
+  <div><span>id: </span>{{selectedHero.id}}</div>
+  <div>
+    <label for = "hero-name">Heroe Nombre: </label>
+      <input id="hero-name" [(ngModel)]="selectedHero.name" placeholder="nombre">
+    </div>
+
+    <div>
+    <label for = "hero-edad">Heroe Edad: </label>
+      <input id="hero-edad" [(ngModel)]="selectedHero.edad" placeholder="edad">
+    </div>
 </div>
