--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -1,1 +1,8 @@
-<p>messages works!</p>
+<div *ngIf="messageService.messages.length">
+
+  <h2>Mensajes</h2>
+  <button class="clear"
+          (click)="messageService.clear()">Limpiar mensajes</button>
+  <div *ngFor='let message of messageService.messages'> {{message}} </div>
+
+</div>
